syntax = "proto3";

package ignore_oneof;

option go_package = "xgo/tests/pb/pboptions";

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

import "tests/proto/module/external.proto";

import "proto/json.proto";

// For test cases ignore field.
message IgnoreOneOf1 {
  oneof OneType1 {
    option (json.oneof) = { json: "t_one1"; ignore: true };

    int32 f_int32 = 1 [ (json.field) = { json: "t_int32"; ignore: false } ];
  }

  oneof OneType2 {
    option (json.oneof) = { json: "t_one2"; ignore: true };

    int64 f_int64 = 2 [ (json.field) = { json: "t_int64"; ignore: false } ];
  }

  oneof OneType3 {
    option (json.oneof) = { json: "t_one3"; ignore: true };

    uint32 f_uint32 = 3 [ (json.field) = { json: "t_uint32"; ignore: false } ];
  }

  oneof OneType4 {
    option (json.oneof) = { json: "t_one4"; ignore: true };

    uint64 f_uint64 = 4 [ (json.field) = { json: "t_uint64"; ignore: false } ];
  }

  oneof OneType5 {
    option (json.oneof) = { json: "t_one5"; ignore: true };

    sint32 f_sint32 = 5 [ (json.field) = { json: "t_sint32"; ignore: false } ];
  }

  oneof OneType6 {
    option (json.oneof) = { json: "t_one6"; ignore: true };

    sint64 f_sint64 = 6 [ (json.field) = { json: "t_sint64"; ignore: false } ];
  }

  oneof OneType7 {
    option (json.oneof) = { json: "t_one7"; ignore: true };

    sfixed32 f_sfixed32 = 7 [ (json.field) = { json: "t_sfixed32"; ignore: false } ];
  }

  oneof OneType8 {
    option (json.oneof) = { json: "t_one8"; ignore: true };

    sfixed64 f_sfixed64 = 8 [ (json.field) = { json: "t_sfixed64"; ignore: false } ];
  }

  oneof OneType9 {
    option (json.oneof) = { json: "t_one9"; ignore: true };

    fixed32 f_fixed32 = 9 [ (json.field) = { json: "t_fixed32"; ignore: false } ];
  }

  oneof OneType10 {
    option (json.oneof) = { json: "t_one10"; ignore: true };

    fixed64 f_fixed64 = 10 [ (json.field) = { json: "t_fixed64"; ignore: false } ];
  }

  oneof OneType11 {
    option (json.oneof) = { json: "t_one11"; ignore: true };

    float f_float = 11 [ (json.field) = { json: "t_float"; ignore: false } ];
  }

  oneof OneType12 {
    option (json.oneof) = { json: "t_one12"; ignore: true };

    double f_double = 12 [ (json.field) = { json: "t_double"; ignore: false } ];
  }

  oneof OneType13 {
    option (json.oneof) = { json: "t_one13"; ignore: true };

    bool f_bool1 = 21 [ (json.field) = { json: "t_bool1"; ignore: false } ];
  }

  oneof OneType14 {
    option (json.oneof) = { json: "t_one14"; ignore: true };

    string f_string1 = 22 [ (json.field) = { json: "t_string1"; ignore: false } ];
  }

  oneof OneType15 {
    option (json.oneof) = { json: "t_one15"; ignore: true };

    bytes f_bytes1 = 23 [ (json.field) = { json: "t_bytes1"; ignore: false } ];
  }

  oneof OneType16 {
    option (json.oneof) = { json: "t_one16"; ignore: true };

    external.Enum1 f_enum1 = 31 [ (json.field) = { json: "t_enum1"; ignore: false } ];
  }

  oneof OneType17 {
    option (json.oneof) = { json: "t_one17"; ignore: true };

    external.Message1 f_message1 = 32 [ (json.field) = { json: "t_message1"; ignore: false } ];
  }

  oneof OneType18 {
    option (json.oneof) = { json: "t_one18"; ignore: true };

    google.protobuf.Any f_any1 = 41 [ (json.field) = { json: "t_any1"; ignore: false } ];
  }

  oneof OneType19 {
    option (json.oneof) = { json: "t_one19"; ignore: true };

    google.protobuf.Duration f_duration1 = 42 [ (json.field) = { json: "t_duration1"; ignore: false } ];
  }

  oneof OneType20 {
    option (json.oneof) = { json: "t_one20"; ignore: true };

    google.protobuf.Timestamp f_timestamp1 = 43 [ (json.field) = { json: "t_timestamp1"; ignore: false } ];
  }
}

// For test cases ignore field.
message IgnoreOneOf2 {
  oneof OneType1 {
    option (json.oneof) = { json: "t_one1"; ignore: false };

    int32 f_int32 = 1 [ (json.field) = { json: "t_int32"; ignore: true } ];
  }

  oneof OneType2 {
    option (json.oneof) = { json: "t_one2"; ignore: false };

    int64 f_int64 = 2 [ (json.field) = { json: "t_int64"; ignore: true } ];
  }

  oneof OneType3 {
    option (json.oneof) = { json: "t_one3"; ignore: false };

    uint32 f_uint32 = 3 [ (json.field) = { json: "t_uint32"; ignore: true } ];
  }

  oneof OneType4 {
    option (json.oneof) = { json: "t_one4"; ignore: false };

    uint64 f_uint64 = 4 [ (json.field) = { json: "t_uint64"; ignore: true } ];
  }

  oneof OneType5 {
    option (json.oneof) = { json: "t_one5"; ignore: false };

    sint32 f_sint32 = 5 [ (json.field) = { json: "t_sint32"; ignore: true } ];
  }

  oneof OneType6 {
    option (json.oneof) = { json: "t_one6"; ignore: false };

    sint64 f_sint64 = 6 [ (json.field) = { json: "t_sint64"; ignore: true } ];
  }

  oneof OneType7 {
    option (json.oneof) = { json: "t_one7"; ignore: false };

    sfixed32 f_sfixed32 = 7 [ (json.field) = { json: "t_sfixed32"; ignore: true } ];
  }

  oneof OneType8 {
    option (json.oneof) = { json: "t_one8"; ignore: false };

    sfixed64 f_sfixed64 = 8 [ (json.field) = { json: "t_sfixed64"; ignore: true } ];
  }

  oneof OneType9 {
    option (json.oneof) = { json: "t_one9"; ignore: false };

    fixed32 f_fixed32 = 9 [ (json.field) = { json: "t_fixed32"; ignore: true } ];
  }

  oneof OneType10 {
    option (json.oneof) = { json: "t_one10"; ignore: false };

    fixed64 f_fixed64 = 10 [ (json.field) = { json: "t_fixed64"; ignore: true } ];
  }

  oneof OneType11 {
    option (json.oneof) = { json: "t_one11"; ignore: false };

    float f_float = 11 [ (json.field) = { json: "t_float"; ignore: true } ];
  }

  oneof OneType12 {
    option (json.oneof) = { json: "t_one12"; ignore: false };

    double f_double = 12 [ (json.field) = { json: "t_double"; ignore: true } ];
  }

  oneof OneType13 {
    option (json.oneof) = { json: "t_one13"; ignore: false };

    bool f_bool1 = 21 [ (json.field) = { json: "t_bool1"; ignore: true } ];
  }

  oneof OneType14 {
    option (json.oneof) = { json: "t_one14"; ignore: false };

    string f_string1 = 22 [ (json.field) = { json: "t_string1"; ignore: true } ];
  }

  oneof OneType15 {
    option (json.oneof) = { json: "t_one15"; ignore: false };

    bytes f_bytes1 = 23 [ (json.field) = { json: "t_bytes1"; ignore: true } ];
  }

  oneof OneType16 {
    option (json.oneof) = { json: "t_one16"; ignore: false };

    external.Enum1 f_enum1 = 31 [ (json.field) = { json: "t_enum1"; ignore: true } ];
  }

  oneof OneType17 {
    option (json.oneof) = { json: "t_one17"; ignore: false };

    external.Message1 f_message1 = 32 [ (json.field) = { json: "t_message1"; ignore: true } ];
  }

  oneof OneType18 {
    option (json.oneof) = { json: "t_one18"; ignore: false };

    google.protobuf.Any f_any1 = 41 [ (json.field) = { json: "t_any1"; ignore: true } ];
  }

  oneof OneType19 {
    option (json.oneof) = { json: "t_one19"; ignore: false };

    google.protobuf.Duration f_duration1 = 42 [ (json.field) = { json: "t_duration1"; ignore: true } ];
  }

  oneof OneType20 {
    option (json.oneof) = { json: "t_one20"; ignore: false };

    google.protobuf.Timestamp f_timestamp1 = 43 [ (json.field) = { json: "t_timestamp1"; ignore: true } ];
  }
}
